tweaked figcaption/figure style and fixed pager visibility and result of zero records found

--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -193,7 +193,7 @@ h3 {
 .masonry figure {
     position: relative;
     overflow: hidden;
-    border:0px solid #ccc;
+    border: 1px solid #ccc;
     min-height: 200px;
     height: auto;
     margin: 0 0 1em 0 !important;
@@ -212,6 +212,7 @@ h3 {
 }
 
 .masonry figcaption {
+    background: rgba(250, 250, 250, 0.8);
     position: absolute;
     bottom: 0px;
     left: 0;
